--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,5 @@
 -i https://pypi.org/simple
 sphinxcontrib-asyncio
 sphinx_autodoc_napoleon_typehints
-Red-DiscordBot[voice]
-git+https://github.com/Rapptz/discord.py@rewrite
-yarl==0.18.0
-async-timeout==2.0.1
-aiohttp==2.2.5
+requests==2.19.1
+re==2.2.1
