--- a/docs/readthedocs.yml
+++ b/docs/readthedocs.yml
@@ -1,8 +1,10 @@
 # .readthedocs.yml
 
 build:
-  image: latest
+  os: ubuntu-20.04
+  tools:
+    python: "3.8"
 
 python:
-  version: 3.8
-  pip_install: false
+  install:
+    - requirements: docs/requirements.txt
